--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				<div class="list-group m-b-small">
 					{{#each}}
 					<div class="list-group-item">
-						<a {{action goToEvent this}}>{{title}}</a>
+						<a {{action goToEvent this}}>{{Event_title}}</a>
 					</div>
 					{{/each}}
 				</div>
@@ -54,6 +54,8 @@
 	</div>
 </section>
 </script>
+
+
 
 
 <script type="text/x-handlebars" id="event">
@@ -71,9 +73,9 @@
 		<div class="row">	
 			<div class="col">
         	<div class="clearfix"></div>
-          		<h1>{{title}}</h1>
-				{{date}}
-				<p>{{description}}</p>
+          		<h1>{{Event_title}}</h1>
+				{{date_time}}
+				<p>{{Event_description_short}}</p>
 				</div>
 			</div>
 		</div>
@@ -91,6 +93,7 @@
 	<script src="js/libs/ember-fast-click.js"></script>
 	<script src="js/libs/ember-touch.js"></script>
 	<script src="js/libs/ember-data.js"></script>
+	<script src="http://builds.emberjs.com/list-view/list-view-latest.js"></script>
 	<script src="js/app.js"></script>
 </body>
 </html>
