--- a/app/index.html
+++ b/app/index.html
@@ -2,13 +2,16 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Yeoman Ember Starter Kit</title>
+        <title>Podion - mobile</title>
 
         <!-- build:css styles/main.css -->
         <link rel="stylesheet" href="styles/style.css">
         <!-- endbuild -->
 </head>
     <body>
+    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
+	<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+
         <!-- build:js scripts/components.js -->
         <script src="bower_components/jquery/jquery.js"></script>
         <script src="bower_components/handlebars/handlebars-1.0.0.js"></script>
